fix: hacakthon badge text-color in dark mode

--- a/apps/commudle-admin/src/app/feature-modules/community-builds/components/community-builds/community-build-card/community-build-card.component.scss
+++ b/apps/commudle-admin/src/app/feature-modules/community-builds/components/community-builds/community-build-card/community-build-card.component.scss
@@ -13,7 +13,7 @@ p {
         @apply com-flex com-justify-center com-items-center md:com-w-[135px] md:com-h-[90px] com-w-[102px] com-h-[68px] com-overflow-hidden com-relative;
 
         app-badge {
-          @apply md:com-hidden com-absolute com-top-3;
+          @apply md:com-hidden com-absolute com-top-3 com-border com-border-solid com-border-tChocolate-Traditional com-rounded-3xl;
         }
       }
 
@@ -31,7 +31,7 @@ p {
           }
 
           app-badge {
-            @apply md:com-flex com-hidden;
+            @apply md:com-flex com-hidden com-border com-border-solid com-border-tChocolate-Traditional com-rounded-3xl;
           }
         }
         .description {
